--- a/src/WebApplication1/Views/Home/Index.cshtml
+++ b/src/WebApplication1/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    Layout = "_LayoutBis";
+    var test = "";
+    var myNumbers = new List<int>() { 15, 14, 13, 12, 11 };
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    @* <h1 class="display-4">Welcome</h1> *@
+    <h1 class="display-@(string.IsNullOrWhiteSpace(test) ? "4" : "8")">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>My title is @ViewData["Title"].</p>
+    <p>@@</p>
+    <ul>
+        @foreach (var myNumber in myNumbers)
+        {
+            <li>@myNumber</li>
+        }
+    </ul>
 </div>
