--- a/src/WebApplication.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/WebApplication.RazorPages/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/MyForm/ListBasic">My basic form list</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/MyForm/Basic">My basic form</a>
                     </li>
                 </ul>
