--- a/src/WebApplication.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/WebApplication.RazorPages/Pages/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/MyForm/ListBasic">My basic form list</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Persons/List">Persons list</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/MyForm/Basic">My basic form</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Persons/Create">Create person</a>
                     </li>
                 </ul>
             </div>
