feature: EF core

--- a/src/WebApplication.RazorPages/Pages/Persons/List.cshtml
+++ b/src/WebApplication.RazorPages/Pages/Persons/List.cshtml
@@ -1,5 +1,7 @@
 @page
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using WebApplication.RazorPages.Models
+@using WebApplication.RazorPages.Persistence.Entities
 @model WebApplication.RazorPages.Pages.Persons.List
 
 <a class="btn btn-primary" asp-page="Create">Ajouter un nouvel élément</a>
